--- a/STARTUP/foodies_app/pubspec.yaml
+++ b/STARTUP/foodies_app/pubspec.yaml
@@ -57,6 +57,17 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  fonts:
+    - family: Lobster
+      fonts:
+        - asset: assets/fonts/Lobster-Regular.ttf
+
+
+
+    - family: Oswald
+      fonts:
+        - asset: assets/fonts/Oswald-Light.ttf
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
